--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Base Extension",
+    "name": "Github Extension",
     "version": "1.0",
-    "description": "This is a basic description for 'Base Extension'"
-    "entrypoint": "main.js",
+    "description": "This extension allows you to download repositories from Github.",
+    "entrypoint": "github.js",
     "matches": [
-        "http(s)?://example.com/*"
+        "(http(s)?://)?github.com/\\w+/\\w+"
     ]
 }
